Used intersection observer API to trigger animations and lazy loading for better performance. Added partials inside my style folder for easier maintainance of project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div id="logo-header">
-            <img src="assets/img/logo.svg" alt="divine_bar_logo" width="300px" height="150px">
+            <a href="index.html"><img src="assets/img/logo.svg" alt="divine_bar_logo" width="300px" height="150px"></a>
         </div>
         <nav>
             <ul>
@@ -27,6 +27,9 @@
     <section class="main-wrapper">
         <div id="home-page-wrapper">
             <div id="hp-welcome-message">
+                <h1 class="page-title">
+                    HOME
+                </h1>
                 <h1>
                     “Accept what life offers you and try to drink from every cup.
                     All wines should be tasted; some
@@ -40,7 +43,7 @@
         </div>
 
         <div id="about-us-page-wrapper">
-            <h1>About us</h1>
+            <h1 class="page-title">About us</h1>
             <div class="first-line-content container">
                 <div class="about-us-text">
                     <p>~ DiVine wine bar is a newly opened bar in the hearth of our city. Its modern interior design and
@@ -77,7 +80,8 @@
         </div>
 
         <div id="gallery-wrapper">
-            <h1>Gallery</h1>
+            <h1 class="page-title">Gallery</h1>
+            <h2>~Wine makes every meal an occasion, every table more elegant, every day more civilized.~</h2>
             <div id="carousel-wrapper">
                 <div id="carousel-container">
                     <div class="carousel-image" id="image1"></div>
@@ -110,6 +114,7 @@
         </div>
     </footer>
     <script src="assets/script/carousel.js"></script>
+    <script src="assets/script/lazy_loading.js"></script>
 </body>
 
 </html>
