Added mobile header and navigation layout and animation

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     </footer>
     <script src="assets/script/carousel.js"></script>
     <script src="assets/script/lazy_loading.js"></script>
+    <script src="assets/script/mobile_navigation.js"></script>
 </body>
 
 </html>
