--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                 <h1 class="page-title">
                     HOME
                 </h1>
-                <h1>
+                <p class="hp-welcome-message-content">
                     “Accept what life offers you and try to drink from every cup.
                     All wines should be tasted; some
                     should only be sipped, but with others, drink the whole bottle.”
-                </h1>
-                <h2>~ Paulo Coelho, Brida ~</h2>
+                </p>
+                <p class="hp-welcome-message-signature">~ Paulo Coelho, Brida ~</p>
             </div>
             <div id="hp-welcome-image">
                 <!--Will display image in background-->
@@ -64,55 +64,62 @@
         </div>
 
         <div id="about-us-page-wrapper">
-            <h1 class="page-title">About us</h1>
-            <div class="first-line-content container">
-                <div class="about-us-text">
-                    <p>~ DiVine wine bar is a newly opened bar in the hearth of our city. Its modern interior design and
-                        concept places us inside a category of modern wine bars across the world. Magical combinations
-                        of wine, food, music and interesting atmosphere will leave you speachless. ~</p>
+            <div class="about-us-page-content">
+                <h1 class="page-title">About us</h1>
+                <div class="first-line-content container">
+                    <div class="about-us-text">
+                        <p>~ DiVine wine bar is a newly opened bar in the hearth of our city. Its modern interior design
+                            and
+                            concept places us inside a category of modern wine bars across the world. Magical
+                            combinations
+                            of wine, food, music and interesting atmosphere will leave you speachless. ~</p>
+                    </div>
+                    <div class="about-us-pic" id="about-us-first-pic">
+                        <!--Pic in background-->
+                    </div>
                 </div>
-                <div class="about-us-pic" id="about-us-first-pic">
-                    <!--Pic in background-->
+                <!--FIRST LINE END-->
+                <div class="second-line-content container">
+                    <div class="about-us-pic" id="about-us-second-pic">
+                        <!--Pic in background-->
+                    </div>
+                    <div class="about-us-text">
+                        <p>~ Besides great choice of wines our bar also offers delicious gastronomic pleasure so you can
+                            enjoy
+                            your wine with great choice of food. ~</p>
+                    </div>
                 </div>
+                <!--SECOND LINE END-->
+                <div class="third-line-content container">
+                    <div class="about-us-text">
+                        <p>~ We invite you to attend our thematic dinner parties followed by great atmosphere made by
+                            our
+                            music band or DJs. And you can have wide variety of alcocholic and non-alcocholic bevarages
+                            which are available on our menu. ~</p>
+                    </div>
+                    <div class="about-us-pic" id="about-us-third-pic">
+                        <!--Pic in background-->
+                    </div>
+                </div>
+                <!--THIRD LINE END-->
             </div>
-            <!--FIRST LINE END-->
-            <div class="second-line-content container">
-                <div class="about-us-pic" id="about-us-second-pic">
-                    <!--Pic in background-->
-                </div>
-                <div class="about-us-text">
-                    <p>~ Besides great choice of wines our bar also offers delicious gastronomic pleasure so you can
-                        enjoy
-                        your wine with great choice of food. ~</p>
-                </div>
-            </div>
-            <!--SECOND LINE END-->
-            <div class="third-line-content container">
-                <div class="about-us-text">
-                    <p>~ We invite you to attend our thematic dinner parties followed by great atmosphere made by our
-                        music band or DJs. And you can have wide variety of alcocholic and non-alcocholic bevarages
-                        which are available on our menu. ~</p>
-                </div>
-                <div class="about-us-pic" id="about-us-third-pic">
-                    <!--Pic in background-->
-                </div>
-            </div>
-            <!--THIRD LINE END-->
         </div>
 
         <div id="gallery-wrapper">
-            <h1 class="page-title">Gallery</h1>
-            <h2>~Wine makes every meal an occasion, every table more elegant, every day more civilized.~</h2>
-            <div id="carousel-wrapper">
-                <div id="carousel-container">
-                    <div class="carousel-image" id="image1"></div>
-                    <div class="carousel-image" id="image2"></div>
-                    <div class="carousel-image" id="image3"></div>
-                    <div class="carousel-image" id="image4"></div>
-                    <div class="carousel-image" id="image5"></div>
-                    <div class="carousel-image" id="image6"></div>
-                    <div class="carousel-image" id="image7"></div>
-                    <div class="carousel-image" id="image8"></div>
+            <div class="gallery-content">
+                <h1 class="page-title">Gallery</h1>
+                <h2>~Wine makes every meal an occasion, every table more elegant, every day more civilized.~</h2>
+                <div id="carousel-wrapper">
+                    <div id="carousel-container">
+                        <div class="carousel-image" id="image1"></div>
+                        <div class="carousel-image" id="image2"></div>
+                        <div class="carousel-image" id="image3"></div>
+                        <div class="carousel-image" id="image4"></div>
+                        <div class="carousel-image" id="image5"></div>
+                        <div class="carousel-image" id="image6"></div>
+                        <div class="carousel-image" id="image7"></div>
+                        <div class="carousel-image" id="image8"></div>
+                    </div>
                 </div>
             </div>
         </div>
