Added blog page, and did some files reorganisation for better maintainance

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DiVine Wine Bar</title>
-    <link rel="stylesheet" href="assets/style/main.css">
+    <link rel="stylesheet" href="assets/style/home_page/main.css">
     <!---Default styling-->
-    <link rel="stylesheet" href="assets/style/desktop-small.css" media="(min-width: 1000px) and (max-width: 1250px)">
+    <link rel="stylesheet" href="assets/style/home_page/desktop-small.css"
+        media="(min-width: 1000px) and (max-width: 1250px)">
     <!---Small desktop resolution styling-->
-    <link rel="stylesheet" href="assets/style/tablets.css" media="(min-width: 768px) and (max-width: 999px)">
+    <link rel="stylesheet" href="assets/style/home_page/tablets.css" media="(min-width: 768px) and (max-width: 999px)">
     <!---Tablets portrait and landscape-->
-    <link rel="stylesheet" href="assets/style/mobile.css" media="(max-width: 767px)">
+    <link rel="stylesheet" href="assets/style/home_page/mobile.css" media="(max-width: 767px)">
     <!---Mobile phones portrait and landscape-->
     <script src="https://kit.fontawesome.com/d025e4f1ed.js" crossorigin="anonymous"></script>
 </head>
@@ -26,7 +27,7 @@
                 <li><a href="#home-page-wrapper">Home</a></li>
                 <li><a href="#about-us-page-wrapper">About Us</a></li>
                 <li><a href="#gallery-wrapper">Gallery</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -40,7 +41,7 @@
                 <li><a href="#home-page-wrapper">Home</a></li>
                 <li><a href="#about-us-page-wrapper">About Us</a></li>
                 <li><a href="#gallery-wrapper">Gallery</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -143,6 +144,7 @@
     </footer>
     <script src="assets/script/carousel.js"></script>
     <script src="assets/script/lazy_loading.js"></script>
+    <script src="assets/script/navigation.js"></script>
     <script src="assets/script/mobile_navigation.js"></script>
 </body>
 
