Added contact page.

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
                 <li><a href="index.html#about-us-page-wrapper">About Us</a></li>
                 <li><a href="index.html#gallery-wrapper">Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="burger">
@@ -43,7 +43,7 @@
                 <li><a href="index.html#about-us-page-wrapper">About Us</a></li>
                 <li><a href="index.html#gallery-wrapper">Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
