--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#about-us-page-wrapper">About Us</a></li>
                 <li><a href="#gallery-wrapper">Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="burger">
@@ -42,7 +42,7 @@
                 <li><a href="#about-us-page-wrapper">About Us</a></li>
                 <li><a href="#gallery-wrapper">Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
