Added smooth scroll effect on home page

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
         <nav class="main-nav">
             <ul>
-                <li><a href="#home-page-wrapper">Home</a></li>
-                <li><a href="#about-us-page-wrapper">About Us</a></li>
-                <li><a href="#gallery-wrapper">Gallery</a></li>
+                <li data-handler="#home-page-wrapper"><a>Home</a></li>
+                <li data-handler="#about-us-page-wrapper"><a>About Us</a></li>
+                <li data-handler="#gallery-wrapper"><a>Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -146,6 +146,7 @@
     <script src="assets/script/lazy_loading.js"></script>
     <script src="assets/script/navigation.js"></script>
     <script src="assets/script/mobile_navigation.js"></script>
+    <script src="assets/script/smooth_scroll.js"></script>
 </body>
 
 </html>
