Finished styling for mobile devices

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,12 @@
     <title>DiVine Wine Bar</title>
     <link rel="stylesheet" href="assets/style/contact_page/contact_main.css">
     <!---Default styling-->
-    <script src="https://kit.fontawesome.com/d025e4f1ed.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/style/contact_page/contact_tablet.css"
+        media="(min-width: 768px) and (max-width: 999px)"">
+    <!---Tablets portrait and landscape styling-->
+    <link rel=" stylesheet" href="assets/style/contact_page/contact_mobile.css" media="(max-width: 767px)">
+    <script src=" https://kit.fontawesome.com/d025e4f1ed.js" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
